# aelkey

./: Readme.md  meson.build  meson.options
artifacts/haptics/: ff-proxy-libevdev.c  ff-test-libevdev.c
data/: 60-aelkey-general-group.rules  72-aelkey-general-uaccess.rules  aelkey_click.lua  aelkey_daemon.lua  aelkey_util.lua  sysusers-aelkey.conf
docs/: aelkey-reference.md  guide-udev.md  readme.md  ref-device-tables.md  ref-general-api.md  ref-helpers.md
scripts/: diag_gatt.lua
source/: aelkey.cc  aelkey_bit.cc  aelkey_bit.h  aelkey_core.cc  aelkey_core.h  aelkey_daemon.cc  aelkey_daemon.h  aelkey_device.cc  aelkey_device.h  aelkey_edge.lua  aelkey_filter.lua  aelkey_gatt.cc  aelkey_gatt.h  aelkey_haptics.cc  aelkey_haptics.h  aelkey_hid.cc  aelkey_hid.h  aelkey_keyboard.lua  aelkey_log.lua  aelkey_loop.cc  aelkey_loop.h  aelkey_mouse.lua  aelkey_sequence.lua  aelkey_state.cc  aelkey_state.h  aelkey_ticker.lua  aelkey_touchpad.lua  aelkey_tracker.lua  aelkey_usb.cc  aelkey_usb.h  aelkey_util.cc  aelkey_util.h  aelkey_util.lua  device_backend.h  device_backend_evdev.cc  device_backend_evdev.h  device_backend_gatt.cc  device_backend_gatt.h  device_backend_hidraw.cc  device_backend_hidraw.h  (+43 more)
source/util/: scoped_timer.md
subprojects/: sol2.wrap
